# pdgen

./: .gitignore  Dockerfile  Makefile  README.md  connection.db  go.mod  go.sum  horusec-config.json  main.go  main.py  model.docx  output.html  output.md  pgsql.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: main.yml  release.yml
bkp/: word.py
cmd/:    author.go  describe.go  describe_test.go  root.go  version.go  version_test.go
docs/: README.md  _coverpage.md  _navbar.md  font.css  index.html
docs/fonts/: icomoon.eot
docs/pages/: about.md  develop.md  get-started.md  install.md  usage.md
pdgen/: config.py  connection.py  pgsql.py
pkg/database/: db.go  db_test.go  sql.go
pkg/models/: model.go  model_test.go
pkg/options/: output.go  output_test.go
pkg/services/: default.go  describe.go  describe_test.go  json.go  json_test.go  json_test.go.bkp  md.go  printer.go  printer_test.go  txt.go
pkg/services/translate/: base.go  base_test.go  en.go  fr.go  pt.go
pkg/services/translate/lang/: en.go  en_test.go  fr.go  fr_test.go  pt.go  pt_test.go
pkg/services/writer/: commons.go  commons_test.go  console.go  console_test.go  html.go  html_test.go  json.go  json_test.go  md.go  md_test.go  pdf.go  txt.go  txt_test.go
resources/: test.sql
tests/: test_config.py  test_connection.py  test_pgsql.py
