[tool.poetry]
name = "pdgen"
version = "0.1.0"
description = "Data dictionary generator for postgresql"
authors = ["Denys G. Santos <gsdenys@gmail.com>"]
license = "Apache2"
readme = "README.md"
packages = [{include = "pdgen"}]

[tool.poetry.dependencies]
python = "^3.10"
postgres = "^4.0"
psycopg2-binary = "^2.9.5"
click = "^8.1.3"
sqlalchemy = "^1.4.44"
pandas = "^1.5.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
